✨ feat: 优化 生成网格
